--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,12 +10,12 @@
             Sign Up with Google
           </a>
         </div>
-        <div class="card-body">
+       <!-- <div class="card-body">
           <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
             <i class="fab fa-facebook"></i>
             Sign Up with Facebook
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
     <h1 class="h center">or</h1>
